# Hexlet

./: Makefile  README.md  pyproject.toml
.github/workflows/: hello-world.yml
Tests/: test_capitalize.py
say_hello/scripts/: main.py
