[tool.poetry]
name = "hexlet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "say_hello"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
say-hello = "say_hello.scripts.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
